force-app/main/default/objects/User/fields/cafsl__Default_Profile__c.field-meta.xml
<CustomField>
    <fullName>cafsl__Default_Profile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Default Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>