force-app/main/default/objects/User/fields/leankor__MyWorkspace__c.field-meta.xml
<CustomField>
    <fullName>leankor__MyWorkspace__c</fullName>
    <description>The personal visual workspace for this user.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Select any leankor board as your own personal workspace.</inlineHelpText>
    <label>My Workspace</label>
    <type>Url</type>
</CustomField>