force-app/main/default/objects/User/fields/leankor__Rate__c.field-meta.xml
<CustomField>
    <fullName>leankor__Rate__c</fullName>
    <inlineHelpText>This is the hourly fully loaded rate for this person.</inlineHelpText>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>