force-app/main/default/objects/User/fields/SFS_X6_ID__c.field-meta.xml
<CustomField>
    <fullName>SFS_X6_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>6 ID</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>