force-app/main/default/objects/User/fields/SFS_X8_ID__c.field-meta.xml
<CustomField>
    <fullName>SFS_X8_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>8 ID</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>