force-app/main/default/objects/User/listViews/AllUsersSF.listView-meta.xml
<ListView>
    <fullName>AllUsersSF</fullName>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.COMPANY_NAME</field>
        <operation>startsWith</operation>
        <value>Salesforce,Leankor,ServiceMax</value>
    </filters>
    <label>All Users - CrossFunctional</label>
</ListView>